removing aux files from git
Signed-off-by: BASHAR ROMANOUS <basharromano@micron.com>

--- a/.gitignore
+++ b/.gitignore
@@ -459,3 +459,11 @@ TSWLatexianTemp*
 # End of https://www.toptal.com/developers/gitignore/api/latex
 
 .vscode/
+
+
+doc/sample-sigplan.aux
+doc/sample-sigplan.bbl
+doc/sample-sigplan.blg
+doc/sample-sigplan.fdb_latexmk
+doc/sample-sigplan.fls
+doc/sample-sigplan.out
